--- a/web/templates/web/base.html
+++ b/web/templates/web/base.html
@@ -8,18 +8,15 @@
     <meta name="description" content="Aplicación web alojada en Google Cloud Platform para Proyecto Integrado">
     <meta name="keywords" content="">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'prueba/css/styles.css' %}">
-    <link rel="stylesheet" href="{% static 'prueba/css/mobile_styles.css' %}">
-    <script src="{% static 'prueba/js/scripts.js' %}"></script>
-    <script src="{% static 'prueba/js/validate.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'web/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'web/css/mobile_styles.css' %}">
+    <script src="{% static 'web/js/scripts.js' %}"></script>
+    <script src="{% static 'web/js/validate.js' %}"></script>
 
 </head>
-<header style="background-image: url('img/home.jpg')">
+<header>
+    {{ base_url }}
 	<div class="container-fluid">
-        <div class="jumbotron text-center" style="margin-bottom:0">
-		  {% block headers %}{% endblock %}
-		</div>
-
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 		  <a class="navbar-brand" href="#">Navegador</a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -28,48 +25,62 @@
 		  <div class="collapse navbar-collapse" id="collapsibleNavbar">
 			<ul class="navbar-nav">
 			  <li class="nav-item">
-				<a class="nav-link active" href="{% url 'home' %}">Inicio</a>
+				<a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'home' %}">Inicio</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="{% url 'seccion' %}">Seccion</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="{% url 'contacto' %}">Contacto</a>
+				<a class="nav-link {% if request.path == '/contacto/' %}active{% endif %}" href="{% url 'contacto' %}">Contacto</a>
 			  </li>
 			</ul>
 		  </div>
 		</nav>
 
-        <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="7500">
-            <!-- Indicators -->
-            <ul class="carousel-indicators">
-                <li data-target=".carousel" data-slide-to="0" class="active"></li>
-                <li data-target=".carousel" data-slide-to="1"></li>
-                <li data-target=".carousel" data-slide-to="2"></li>
-            </ul>
-
-            <!-- The slideshow -->
-
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class=""></li>
+              <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+            </ol>
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="{% static 'prueba/img/Vivienda1.jpg' %}" alt="">
+              <div class="carousel-item">
+                <img class="first-slide" src="{% static 'web/img/Vivienda1.jpg' %}" alt="">
+                <div class="container">
+                  <div class="carousel-caption text-left">
+                    <h1>Example headline.</h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                  </div>
                 </div>
-                <div class="carousel-item">
-                  <img src="{% static 'prueba/img/Vivienda2.jpg' %}" alt="">
+              </div>
+              <div class="carousel-item active">
+                <img class="second-slide" src="{% static 'web/img/Vivienda2.jpg' %}" alt="">
+                <div class="container">
+                  <div class="carousel-caption text-left">
+                    <h1>Another example headline.</h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                  </div>
                 </div>
-                <div class="carousel-item">
-                  <img src="{% static 'prueba/img/Vivienda3.jpg' %}" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="third-slide" src="{% static 'web/img/Vivienda3.jpg' %}" alt="">
+                <div class="container">
+                  <div class="carousel-caption text-left">
+                    <h1>One more for good measure.</h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+                  </div>
                 </div>
+              </div>
             </div>
-
-            <!-- Left and right controls -->
-            <a class="carousel-control-prev" href=".carousel" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
+            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href=".carousel" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
+            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
             </a>
-        </div>
+      </div>
 	</div>
 </header>
 <body>
@@ -77,72 +88,68 @@
     {% block content %}
 
 
-
-
-
-
-
-
-
-
-
-
     {% endblock %}
     <!-- Footer -->
     <div class="jumbotron" style="margin-bottom:0">
         <div class="row">
-            <div class="col">
+            <div class="col-sm">
                 <h3>Redes Sociales</h3>
                   <ul class="nav nav-pills flex-column">
+                  {% if LINK_FACEBOOK %}
                     <li class="nav-item">
-                      <a class="nav-link" href="https://www.facebook.com"><img style="width: 24px; heigth: 24px;" src="{% static 'prueba/img/Facebook.ico' %}"> Facebook</a>
+                      <a class="nav-link" href="{{ LINK_FACEBOOK }}"><img style="width: 24px; heigth: 24px;" src="{% static 'web/img/Facebook.ico' %}"> Facebook</a>
                     </li>
+                  {% endif %}
+                      {% if LINK_TWITTER %}
                     <li class="nav-item">
-                      <a class="nav-link" href="https://www.instagram.com"><img style="width: 24px; heigth: 24px;" src="{% static 'prueba/img/Instagram.ico' %}"> Instagram</a>
+                      <a class="nav-link" href="{{ LINK_TWITTER }}"><img style="width: 24px; heigth: 24px;" src="{% static 'web/img/Twitter.gif' %}"> Twitter</a>
                     </li>
+                  {% endif %}
+                      {% if LINK_INSTAGRAM %}
                     <li class="nav-item">
-                      <a class="nav-link" href="https://www.twitter.com"><img style="width: 24px; heigth: 24px;" src="{% static 'prueba/img/Twitter.ico' %}"> Twitter</a>
+                      <a class="nav-link" href="{{ LINK_INSTAGRAM }}"><img style="width: 24px; heigth: 24px;" src="{% static 'web/img/Instagram.ico' %}"> Instagram</a>
                     </li>
+                  {% endif %}
                   </ul>
                   <hr class="d-sm-none">
             </div>
-            <div class="col">
+            <div class="col-sm">
                 <h3>Contacto</h3>
                   <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                      <p><img style="width: 24px; heigth: 24px;" src="{% static 'prueba/img/icons/si-glyph-smartphone.svg' %}"> Teléfono: 666666666</p>
+                      <p><img style="width: 24px; heigth: 24px;" src="{% static 'web/img/icons/si-glyph-smartphone.svg' %}"> Teléfono: 666666666</p>
                     </li>
                     <li class="nav-item">
-                      <a href="#"><img style="width: 24px; heigth: 24px;" src="{% static 'prueba/img/icons/si-glyph-mail.svg' %}"> Correo electrónico</a>
+                      <a href="#"><img style="width: 24px; heigth: 24px;" src="{% static 'web/img/icons/si-glyph-mail.svg' %}"> Correo electrónico</a>
                     </li>
                   </ul>
                   <hr class="d-sm-none">
             </div>
-            <div class="col">
+            <div class="col-sm">
                 <h3>Destacados</h3>
                   <ul class="nav nav-pills flex-column">
+                  {% for destacado in destacados %}
                     <li class="nav-item">
-                      <a href="#">Apartamento</a>
+                      <a href="{{ destacado.link }}">{{ destacado.titulo }}</a>
                     </li>
-                    <li class="nav-item">
-                      <a href="#">Ático</a>
-                    </li>
-                      <li class="nav-item">
-                      <a href="#">Adosado</a>
-                    </li>
+                  {% endfor %}
                   </ul>
                   <hr class="d-sm-none">
             </div>
         </div>
+        <hr>
         <div class="copyright text-center">
             <p>Copyright © 2018. Web desarrollada por Antonio Extremera Casado como Proyecto Integrado.</p>
         </div>
     </div>
 
     <!-- Librerias Bootstrap CSS JS-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="{% static 'web/vendor/css/bootstrap.css' %}">
+    <!--<link rel="stylesheet" href="{% static 'web/vendor/css/bootstrap.min.css' %}">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>-->
+    <script src="{% static 'web/vendor/js/bootstrap.js' %}"></script>
 </body>
 </html>
