--- a/web/templates/web/contacto.html
+++ b/web/templates/web/contacto.html
@@ -1,4 +1,4 @@
-{% extends 'prueba/base.html' %}
+{% extends 'web/base.html' %}
 {% block title %}Contacto{% endblock %}
 {% block headers %}
 	<h1>Sección de contacto</h1>
@@ -6,13 +6,14 @@
 {% load static %}
 {% block content %}
 <div class="container-fluid bg-grey">
+  <hr>
   <h2 class="text-center">CONTACT</h2>
   <div class="row">
     <div class="col-sm-5">
       <p>Contacte con nosotros y responderemos en menos de 24 horas.</p>
-      <p><img style="width: 24px; heigth: 24px;" src="{% static 'prueba/img/icons/si-glyph-pin-location.svg' %}"> España</p>
-      <p><img style="width: 24px; heigth: 24px;" src="{% static 'prueba/img/icons/si-glyph-smartphone.svg' %}"> 666666666</p>
-      <p><img style="width: 24px; heigth: 24px;" src="{% static 'prueba/img/icons/si-glyph-mail.svg' %}"> Correo electrónico</p>
+      <p><img style="width: 24px; heigth: 24px;" src="{% static 'web/img/icons/si-glyph-pin-location.svg' %}"> España</p>
+      <p><img style="width: 24px; heigth: 24px;" src="{% static 'web/img/icons/si-glyph-smartphone.svg' %}"> 666666666</p>
+      <p><img style="width: 24px; heigth: 24px;" src="{% static 'web/img/icons/si-glyph-mail.svg' %}"> Correo electrónico</p>
     </div>
     <div class="col-sm-7">
       <div class="row">
@@ -31,5 +32,6 @@
       </div>
     </div>
   </div>
+  <hr>
 </div>
 {% endblock %}
