--- a/web/templates/web/home.html
+++ b/web/templates/web/home.html
@@ -1,11 +1,13 @@
-{% extends 'prueba/base.html' %}
-{% block title %}Portada{% endblock %}
+{% extends 'web/base.html' %}
+{% block title %}Inicio{% endblock %}
 {% block headers %}
 	<h1>Cabecera de inicio</h1>
 {% endblock %}
 {% block content %}
+{% load static %}
+<hr>
 	<div class="container-fluid">
-		<h2>Motor de búsqueda</h2>
+		<h2>Búsqueda Avanzada</h2>
 		<form action="javascript: return false">
 			<div class="row">
 				<div class="col">
@@ -89,19 +91,32 @@
 	<hr>
 	<div class="container" style="margin-top:30px">
 		<h2>Nuestras Viviendas</h2>
-		{% for vivienda in viviendas %}
-			<div class="row">
-				<div class="col-sm-8">
-					<h2>{{vivienda.titulo}}</h2>
-					<a href="{% url 'seccion' %}"><img class="img-fluid" src="{{vivienda.imagen.url}}"></a>
-					<p>{{vivienda.descripcion}}</p>
-					{% if vivienda.link %}
-						<a href="{{ vivienda.link }}">Más información</a>
-					{% endif %}
-					<br>
+		{% if viviendas %}
+			{% for vivienda in viviendas %}
+				<div class="row">
+				<div class="col-md-7">
+				  <a href="{% url 'seccion' vivienda.id %}">
+					<img class="img-fluid rounded mb-3 mb-md-0" src="{{vivienda.imagen.url}}" style="width: 700px; height: 300px" alt="">
+				  </a>
 				</div>
-			</div>
-		{% endfor %}
-		<hr>
+				<div class="col-md-5">
+				    <h3>{{vivienda.titulo}}</h3>
+					<h4>{{vivienda.operacion}}: {{vivienda.precio}} €{% if vivienda.operacion == 'Alquiler' %}/Dia{%endif%}</h4>
+				    <p>{{vivienda.descripcion|truncatechars:350}}</p>
+						<span><img style="width: 24px; height: 20px;" src="{% static 'web/img/icons/si-glyph-bed.svg' %}"> {{ vivienda.dormitorios }}&emsp;</span>
+						<span><img style="width: 24px; height: 20px;" src="{% static 'web/img/icons/si-glyph-shower.svg' %}"> {{ vivienda.banos }}&emsp;</span>
+						<span><img style="width: 24px; height: 20px;" src="{% static 'web/img/icons/si-glyph-square-dashed-2.svg' %}"> {{ vivienda.superficie }} (m2)</span>
+						<br>
+						<hr>
+				    <a class="btn btn-primary" href="{% url 'seccion' vivienda.id %}">Más información</a>
+				</div>
+			  </div>
+				<hr>
+			{% endfor %}
+		{% else %}
+			<h1>No se han encontrado resultados.</h1>
+			<hr>
+		{% endif %}
+
 	</div>
 {% endblock %}
